--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,9 @@
   <title>layout-designer-project-58/kaolin</title>
 </head>
 <body>
+  <header></header>
+  <main></main>
+  <footer></footer>
   
 </body>
 </html>
