--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,30 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../src/styles/style.css">
   <title>layout-designer-project-58/kaolin</title>
 </head>
 <body>
-  <header></header>
-  <main></main>
-  <footer></footer>
+  <header>
+    <section>
+      <h1 class="h1-title">Когнитивные
+        искажения
+        в программировании
+      </h1>
+    </section>
+  </header>
+  <main>
+    <section></section>
+    <section></section>
+    <section></section>
+    <section></section>
+    <section></section>
+    <section></section>
+    <section></section>
+  </main>
+  <footer>
+    <section></section>
+  </footer>
   
 </body>
 </html>
