--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,14 @@
   <title>layout-designer-project-58/kaolin</title>
 </head>
 <body>
-  <header>
-    <section>
-      <h1 class="h1-title">Когнитивные
-        искажения
+  <header class="background-header">
+    <section class="header-section">
+      <h1 class="header-title">Когнитивные
+        искажения 
+        <br>
         в программировании
       </h1>
+      <img class="main-image" src="../src/images/main.png">
     </section>
   </header>
   <main>
