--- a/src/index.html
+++ b/src/index.html
@@ -9,14 +9,21 @@
 </head>
 <body>
   <header class="background-header">
-    <section class="header-section">
-      <h1 class="header-title">Когнитивные
-        искажения 
-        <br>
-        в программировании
+    <div class="header-container">
+      <h1 class="header-title">Когнитивные<br>
+        искажения</br>
+        <span class="color-black-title">в программировании</span>
+        <img class="main-image" src="../src/images/main.png">
       </h1>
-      <img class="main-image" src="../src/images/main.png">
-    </section>
+      <div class="header-text">
+        <div class="main-header-text">
+              <p class="paragraph">Мы, разработчики, часто сталкиваемся с проблемами, которые идут вразрез с нашей продуктивностью. Но мы часто игнорируем целостную картину. Некоторые из этих проблем малозаметны, некоторые существенны. Иногда с ними можно как-то справиться, а иногда, к сожалению, нет.</p>
+              <p class="paragraph">Вместе они формируют что-то вроде замкнутого цикла, и это может привести к длительной потере продуктивности, багам и бесконечному разочарованию.</p>
+              <p class="paragraph">Если мы сможем минимизировать воздействие одного или нескольких из этих факторов, то сможем сломать и цикл, а остатки нейтрализовать.</p>
+              <button class="header-button">ПОДРОБНЕЕ<a href="#navigation" class="navigate-button"></a></button>
+        </div>
+      </div>
+    </div>
   </header>
   <main>
     <section></section>
