--- a/src/index.html
+++ b/src/index.html
@@ -8,13 +8,13 @@
   <title>layout-designer-project-58/kaolin</title>
 </head>
 <body>
-  <header class="background-header">
+  <header class="background-header bg-color-light">
     <div class="header-container">
       <h1 class="header-title">Когнитивные<br>
-        искажения</br>
+        искажения<br>
         <span class="color-black-title">в программировании</span>
-        <img class="main-image" src="../src/images/main.png">
       </h1>
+      <img class="main-image" alt="main" src="../src/images/main.png">
       <div class="header-text">
         <div class="main-header-text">
               <p class="paragraph">Мы, разработчики, часто сталкиваемся с проблемами, которые идут вразрез с нашей продуктивностью. Но мы часто игнорируем целостную картину. Некоторые из этих проблем малозаметны, некоторые существенны. Иногда с ними можно как-то справиться, а иногда, к сожалению, нет.</p>
