--- a/src/index.html
+++ b/src/index.html
@@ -8,25 +8,42 @@
   <title>layout-designer-project-58/kaolin</title>
 </head>
 <body>
-  <header class="background-header bg-color-light">
-    <div class="header-container">
-      <h1 class="header-title">Когнитивные<br>
-        искажения<br>
-        <span class="color-black-title">в программировании</span>
-      </h1>
-      <img class="main-image" alt="main" src="../src/images/main.png">
-      <div class="header-text">
-        <div class="main-header-text">
-              <p class="paragraph">Мы, разработчики, часто сталкиваемся с проблемами, которые идут вразрез с нашей продуктивностью. Но мы часто игнорируем целостную картину. Некоторые из этих проблем малозаметны, некоторые существенны. Иногда с ними можно как-то справиться, а иногда, к сожалению, нет.</p>
-              <p class="paragraph">Вместе они формируют что-то вроде замкнутого цикла, и это может привести к длительной потере продуктивности, багам и бесконечному разочарованию.</p>
-              <p class="paragraph">Если мы сможем минимизировать воздействие одного или нескольких из этих факторов, то сможем сломать и цикл, а остатки нейтрализовать.</p>
-              <button class="header-button">ПОДРОБНЕЕ<a href="#navigation" class="navigate-button"></a></button>
+    <header class="header-section bg bg-light">
+      <div class="container">
+        <h1>Когнитивные <br>искажения<br><span class="text-dark">в программировании</span></h1>
+        <img src="./images/main.png" alt="Тота с ноутбуком" class="header-img">
+        <div class="flex-container padding-top-185">
+          <div class="flex-column">
+            <p class="text-dark">
+              Мы, разработчики, часто сталкиваемся с проблемами, которые идут 
+              вразрез с нашей продуктивностью. Но мы часто игнорируем целостную 
+              картину. Некоторые из этих проблем малозаметны, некоторые существенны. 
+              Иногда с ними можно как-то справиться, а иногда, к сожалению, нет.
+            </p>
+          </div>
+          <div class="flex-column">
+            <p class="text-dark">
+              Вместе они формируют что-то вроде замкнутого цикла, и это может 
+              привести к длительной потере продуктивности, багам и бесконечному 
+              разочарованию.
+            </p>
+            <p class="text-dark">
+              Если мы сможем минимизировать воздействие одного или нескольких из 
+              этих факторов, то сможем сломать и цикл, а остатки нейтрализовать.
+            </p>
+            <a href="#navigation" class="button-1">Подробнее</a>
+          </div>
         </div>
       </div>
-    </div>
-  </header>
+    </header>
   <main>
-    <section></section>
+      <section class="video-section">
+        <div class="container flex-center">
+          <h2 class="text-center margin-bottom-30"><span class="text-dark">Что же это такое,</span><br>когнитивные искажения?</h2>
+          <p class="text-dark text-center margin-bottom-30">Что такое когнитивные искажения. Petrovna Channel</p>
+          <iframe class="video" width="919" height="569" src="https://www.youtube.com/embed/jie9AizBqss" frameborder="0" allowfullscreen></iframe>
+        </div>
+    </section>
     <section></section>
     <section></section>
     <section></section>
