starts and update step 5 + comment old code

--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,15 @@
           <iframe class="video" width="919" height="569" src="https://www.youtube.com/embed/jie9AizBqss" frameborder="0" allowfullscreen></iframe>
         </div>
     </section>
-    <section></section>
+    <section id="navigation">
+      <div class="list container">
+        <div class="list-item">
+          <h3 class="list-title">
+            <span class="main-color">5 когнитивных<br>искажений<br></span><span class="text-white">о существовании<br>которых стоит<br>помнить</span>
+          </h3>
+        </div>
+      </div>
+    </section>
     <section></section>
     <section></section>
     <section></section>
