ready ikea effects

--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,13 @@
             <span class="main-color">5 когнитивных<br>искажений<br></span><span class="text-white">о существовании<br>которых стоит<br>помнить</span>
           </h3>
         </div>
+        <a href="">
+          <div class="list-item list-item-card">
+            <p class="number">1</p>
+            <h3 class="card-name">Эффект ИКЕА</h3>
+            <p class="text-dark list-item-text">Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.</p>
+          </div>
+        </a>
       </div>
     </section>
     <section></section>
