step 5, all cards

--- a/src/index.html
+++ b/src/index.html
@@ -45,20 +45,61 @@
         </div>
     </section>
     <section id="navigation">
-      <div class="list container">
-        <div class="list-item">
-          <h3 class="list-title">
-            <span class="main-color">5 когнитивных<br>искажений<br></span><span class="text-white">о существовании<br>которых стоит<br>помнить</span>
-          </h3>
-        </div>
-        <a href="">
-          <div class="list-item list-item-card">
-            <p class="number">1</p>
-            <h3 class="card-name">Эффект ИКЕА</h3>
-            <p class="text-dark list-item-text">Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.</p>
-          </div>
-        </a>
-      </div>
+      <nav class="navigation-cards container">
+        <ul class="navigation-list">
+            <li class="navigation-title">
+                <div>
+                    <h1 class="navigation-title-52">5 когнитивных искажений<span
+                            class="white about-title-display-block"> о
+                            существовании
+                            которых стоит помнить</span></h1>
+                </div>
+            </li>
+            <li class="navigation-item">
+                <a class="navigation-item-link" href="">
+                    <h2 class="navigation-item-num">1</h2>
+                    <h3 class="navigation-item-title">Эффект ИКЕА</h3>
+                    <p class="navigation-item-txt">Вы переоцениваете собственные решения, и, как следствие,
+                        недооцениваете решения
+                        других.</p>
+                </a>
+            </li>
+            <li class="navigation-item">
+                <a class="navigation-item-link" href="">
+                    <h2 class="navigation-item-num">2</h2>
+                    <h3 class="navigation-item-title">Преждевременная оптимизация</h3>
+                    <p class="navigation-item-txt">Вы оптимизируете что-то задолго до того, как в этом
+                        появляется необходимость.</p>
+                </a>
+            </li>
+            <li class="navigation-item">
+                <a class="navigation-item-link" href="">
+                    <h2 class="navigation-item-num">3</h2>
+                    <h3 class="navigation-item-title">Искажение новизны</h3>
+                    <p class="navigation-item-txt">Вы даёте более высокую оценку тем событиям, которые
+                        произошли недавно, и
+                        недооцениваете более старые.</p>
+                </a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-item-link" href="">
+                  <h2 class="navigation-item-num">4</h2>
+                  <h3 class="navigation-item-title">Гиперболическое обесценивание</h3>
+                  <p class="navigation-item-txt">Вы гонитесь за немедленной маленькой выгодой и
+                      игнорируете более крупную, недоступную
+                      сейчас, но доступную в будущем.</p>
+              </a>
+          </li>
+          <li class="navigation-item">
+              <a class="navigation-item-link" href="">
+                  <h2 class="navigation-item-num">5</h2>
+                  <h3 class="navigation-item-title">Ошибка планирования</h3>
+                  <p class="navigation-item-txt">Неправильно рассчитывать время необходимое для завершения
+                      задачи.</p>
+              </a>
+          </li>
+      </ul>
+  </nav>
     </section>
     <section></section>
     <section></section>
